welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:43: error: Unmatched closing brace '}' ignored here
      }
      ^SlugHunting:48: error: Unmatched closing brace '}' ignored here
}
^